# HeyGhost

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION_NOTES.md  PROJECT_CONTEXT.md  README.md  SECURITY.md  SUPPORT.md  config.example.yaml  config.yaml  github.txt  heyghost.py  install.sh  pyproject.toml  questions.txt  requirements.txt  uninstall.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  tests.yml
docs/: cybersecurity_ai_question_bank.md
heyghost/: app.py  config.py  debug_events.py  debug_window.py  logger.py  replay.py  response_policy.py  routing.py  state.py
heyghost/audio/: __init__.py  input.py  output.py  recorder.py  vad.py  vad_silero.py  vad_webrtc.py
heyghost/conversation/: memory.py
heyghost/gui/: __init__.py  command_console.py  diagnostics.py  ghost_wave.py  theme.py
heyghost/llm/: capabilities.py  followup_generator.py  log_analyzer.py  note_summarizer.py  ollama_client.py  result_explainer.py  structured.py
scripts/: benchmark_latency.py  benchmark_models.sh  heyghost-button.desktop  heyghost_button.sh  install_dependencies.sh  test_audio_input.sh  test_ollama.sh  test_stt.sh  test_tts.sh
systemd/: hey-ghost.service
tests/: run_tests.py  test_arithmetic_skill.py  test_attention_gate.py  test_cli.py  test_command_grammar.py  test_conversation_prompt.py  test_domain_catalog.py  test_linux_system.py  test_rag.py  test_response_policy.py  test_router.py  test_self_echo.py  test_structured_llm.py  test_transcript_filter.py
(+30 files in other folders)
